--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,8 @@ a {
   color: white;
   position: absolute;
   top: 50%;
+  bottom: 50%
+  right:50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
